# foring

./: .gitignore  README.md  pyproject.toml  test.py
PyMyForing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
foring/: __init__.py  core.py
foring.egg-info/: PKG-INFO  SOURCES.txt
pyforing.egg-info/: PKG-INFO  SOURCES.txt
