[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMyForing"  # Updated to match your new library name
version = "0.1.0"
authors = [
  { name="Shayan Saha", email="shayan851997@gmail.com" },
]
description = "A simple, wrapper for effortless file reading and writing."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# This tells pip to automatically install PyYAML when someone installs your package
dependencies = [
    "PyYAML>=6.0"
]

[project.urls]
"Homepage" = "https://github.com/shayansaha85/foring"